--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="description" content="Фотошоп — Интернет-магазин фото- и видеотехники" />
@@ -9,33 +10,33 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./img/favicon/apple-touch-icon.png"
+      href="img/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./img/favicon/favicon-32x32.png"
+      href="img/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./img/favicon/favicon-16x16.png"
+      href="img/favicon/favicon-16x16.png"
     />
     <link
       rel="manifest"
-      href="./img/favicon/site.webmanifest"
+      href="img/favicon/site.webmanifest"
       crossorigin="use-credentials"
     />
     <link
       rel="mask-icon"
-      href="./img/favicon/safari-pinned-tab.svg"
+      href="img/favicon/safari-pinned-tab.svg"
       color="#5bbad5"
     />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="stylesheet" href="./css/style.min.css" />
+    <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
     <div class="visually-hidden">
